10Kubernates/6K8s-Services/ClusterIP .yaml




######################################################
################## Demo – ClusterIP ##################
######################################################



$ vim deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dolfined
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prod
  template:
    metadata:
      labels:
        app: prod
    spec:
      containers:
        - name: simple-webserver
          image: menamagdyhalem/simple-webserver
          ports:
            - containerPort: 3000
---

ubuntu@master:~$ kubectl apply -f deploy.yaml


ubuntu@master:~$ kubectl get pod -o wide

NAME                       READY   STATUS    RESTARTS   AGE    IP         
dolfined-6578d6bb8-c9b25   1/1     Running   0          107s   10.244.2.43 
dolfined-6578d6bb8-gf6bt   1/1     Running   0          107s   10.244.1.17 
dolfined-6578d6bb8-tqtx7   1/1     Running   0          107s   10.244.1.18 


# So now we create the deployment only, you can write 
# the ip and port number to access the app through a specific pod

ubuntu@master:~$ curl 10.244.1.17:3000

Hello From DolfinED, This App is Running on Pod: dolfined-6578d6bb8-gf6bt

# this is the wrong way because if you delete this pod,
# the deployment will create a new pod with a new ip
# so we need something with a static ip address, which is the K8s Service

ubuntu@master:~$ kubectl delete po dolfined-6578d6bb8-gf6bt
pod "dolfined-6578d6bb8-gf6bt" deleted

ubuntu@master:~$ kubectl get pod -o wide
NAME                       READY   STATUS    RESTARTS   AGE     IP          
dolfined-6578d6bb8-c9b25   1/1     Running   0          8m16s   10.244.2.43 
dolfined-6578d6bb8-hszx4   1/1     Running   0          91s     10.244.2.44 
dolfined-6578d6bb8-tqtx7   1/1     Running   0          8m16s   10.244.1.18 

# you will notice the deployment creates a new pod with a new ip

So lets try to create a service for this deployment:

$ kubectl expose deployment dolfined --port=2000 --target-port=3000

$ kubectl describe svc 

$ kubectl delete svc 


.............

$ vim service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: dolfined-svc
spec:
  type: ClusterIP
  selector:
    app: prod
  ports:
    - port: 2000
      targetPort: 3000
---
ubuntu@master:~$ kubectl apply -f service.yaml

ubuntu@master:~$ kubectl get svc

NAME           TYPE        CLUSTER-IP    EXTERNAL-IP   PORT(S)    AGE
dolfined-svc   ClusterIP   10.96.74.29   <none>        2000/TCP   79s
kubernetes     ClusterIP   10.96.0.1     <none>        443/TCP    9h

ubuntu@master:~$ curl 10.96.74.29:2000  #  you can delete any pod and the ip of the svc will not change

Hello From DolfinED, This App is Running on Pod: dolfined-6578d6bb8-c9b25

# also you can access this service inside the cluster only. Feel free to try to access the svc in any node it will work

2. How services works:

ubuntu@master:~$ kubectl get po -o wide

NAME                       READY   STATUS    RESTARTS   AGE   IP            NODE    NOMINATED NODE   READINESS GATES
dolfined-6578d6bb8-c9b25   1/1     Running   0          28m   10.244.2.43   node1   <none>           <none>
dolfined-6578d6bb8-hszx4   1/1     Running   0          22m   10.244.2.44   node1   <none>           <none>
dolfined-6578d6bb8-tqtx7   1/1     Running   0          28m   10.244.1.18   node2   <none>           <none>
 
ubuntu@master:~$ kubectl get svc

NAME           TYPE        CLUSTER-IP    EXTERNAL-IP   PORT(S)    AGE
dolfined-svc   ClusterIP   10.96.74.29   <none>        2000/TCP   15m
kubernetes     ClusterIP   10.96.0.1     <none>        443/TCP    10h

ubuntu@master:~$ kubectl get ep

ubuntu@master:~$ sudo iptables -n -t nat -L KUBE-SERVICES

Chain KUBE-SERVICES (2 references)
target     prot opt source               destination
KUBE-MARK-MASQ  udp  -- !10.244.0.0/16        10.96.0.10           /* kube-system/kube-dns:dns cluster IP */ udp dpt:53
KUBE-SVC-TCOU7JCQXEZGVUNU  udp  --  0.0.0.0/0            10.96.0.10           /* kube-system/kube-dns:dns cluster IP */ udp dpt:53
KUBE-MARK-MASQ  tcp  -- !10.244.0.0/16        10.96.0.10           /* kube-system/kube-dns:dns-tcp cluster IP */ tcp dpt:53
KUBE-SVC-ERIFXISQEP7F7OF4  tcp  --  0.0.0.0/0            10.96.0.10           /* kube-system/kube-dns:dns-tcp cluster IP */ tcp dpt:53
KUBE-MARK-MASQ  tcp  -- !10.244.0.0/16        10.96.0.10           /* kube-system/kube-dns:metrics cluster IP */ tcp dpt:9153
KUBE-SVC-JD5MR3NA4I4DYORP  tcp  --  0.0.0.0/0            10.96.0.10           /* kube-system/kube-dns:metrics cluster IP */ tcp dpt:9153
KUBE-MARK-MASQ  tcp  -- !10.244.0.0/16        10.96.74.29          /* default/dolfined-svc cluster IP */ tcp dpt:2000
KUBE-SVC-XXCQACHYTRKJVTG7  tcp  --  0.0.0.0/0            10.96.74.29          /* default/dolfined-svc cluster IP */ tcp dpt:2000
KUBE-MARK-MASQ  tcp  -- !10.244.0.0/16        10.96.0.1            /* default/kubernetes:https cluster IP */ tcp dpt:443
KUBE-SVC-NPX46M4PTMTKRN6Y  tcp  --  0.0.0.0/0            10.96.0.1            /* default/kubernetes:https cluster IP */ tcp dpt:443
KUBE-NODEPORTS  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes service nodeports; NOTE: this must be the last rule in this chain */ ADDRTYPE match dst-type LOCAL


ubuntu@master:~$ sudo iptables -n -t nat -L KUBE-SVC-XXCQACHYTRKJVTG7

Chain KUBE-SVC-XXCQACHYTRKJVTG7 (1 references)
target     prot opt source               destination
KUBE-SEP-V7VKD2VNH2TJROCL  all  --  0.0.0.0/0            0.0.0.0/0            /* default/dolfined-svc */ statistic mode random probability 0.33333333349
KUBE-SEP-43EMD5JX7A3IDCY6  all  --  0.0.0.0/0            0.0.0.0/0            /* default/dolfined-svc */ statistic mode random probability 0.50000000000
KUBE-SEP-NJZUSUHUKY4UQKXD  all  --  0.0.0.0/0            0.0.0.0/0            /* default/dolfined-svc */

ubuntu@master:~$ sudo iptables -n -t nat -L KUBE-SEP-V7VKD2VNH2TJROCL

Chain KUBE-SEP-V7VKD2VNH2TJROCL (1 references)
target     prot opt source               destination
KUBE-MARK-MASQ  all  --  10.244.1.18          0.0.0.0/0            /* default/dolfined-svc */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/dolfined-svc */ tcp to:10.244.1.18:3000

$ kubectl describe svc dolfined 
$ kubectl delete svc dolfined
